Combine remaining tests in InputsPageE2ETest
uneditableInputsShouldBeUneditable() is left as its own test because I found that merging it with specialInputsShouldBehaveCorrectly() caused that test to become flaky. Seems like selenium doesn't like something about attempting to modifying the uneditable input.

[finishes #178952587]